@@ -19,6 +19,8 @@ class Preferences: public QObject {
     Q_PROPERTY(QString style READ style WRITE setStyle NOTIFY valueChanged)
     Q_PROPERTY(int orientation READ orientation WRITE setOrientation NOTIFY valueChanged)
     Q_PROPERTY(bool preventBlanking READ preventBlanking WRITE setPreventBlanking NOTIFY valueChanged)
+    Q_PROPERTY(bool showToolBar READ showToolBar WRITE setShowToolBar NOTIFY valueChanged)
+
 public:
     static Preferences *instance();
     static void close();
@@ -38,6 +40,8 @@ public:
     void setOrientation(int v) {setValue("orientation", v);}
     bool preventBlanking() {return value("preventblanking", false).toBool();}
     void setPreventBlanking(bool v) {setValue("preventblanking", v);}
+    bool showToolBar() {return value("showtoolbar", true).toBool();}
+    void setShowToolBar(bool v) {setValue("showtoolbar", v);}
 
 signals:
     void valueChanged(const QString &key);
