@@ -1,5 +1,7 @@
 ionic (0.5.4) unstable; urgency=low
 
+  * Add setting to hide the toolbar
+
  -- Akos Polster <akos@pipacs.com>  Sun, 23 Oct 2011 18:58:00 +0200
 
 ionic (0.5.3) unstable; urgency=low
